# Trabalho2-ComputacaoParalela-18maio2021

./: Trabalho 2 Computacao Paralela.pptx  Trabalho 2B Computacao Paralela.pptx
EqBurgerNewtonJacobiParalelo_Cpp/: CMakeLists.txt  Trab2BurgerNewtonJacobi.cpp
EqBurgerNewtonJacobiSerial_Cpp/: BurgerNewtonJacobi.cpp  CMakeLists.txt
MPI_Bcast_Ex1/: CMakeLists.txt  MPI_Bcast.cpp
MatLab/: EqBurger.m  TestaEqCalorTrabalho2.m  Trabalho2Burger.m  burgers.m
